--- a/thesis-main/document/Bibliography.bib
+++ b/thesis-main/document/Bibliography.bib
@@ -306,4 +306,15 @@
  url     = {https://pytorch.org/docs/stable/cuda.html}
  }
 
+@article{chen2019learning,
+  title={Learning driving models from parallel end-to-end driving data set},
+  author={Chen, Long and Wang, Qing and Lu, Xiankai and Cao, Dongpu and Wang, Fei-Yue},
+  journal={Proceedings of the IEEE},
+  volume={108},
+  number={2},
+  pages={262--273},
+  year={2019},
+  publisher={IEEE}
+}
+
 
