--- a/thesis-main/document/MainMatter/Introduction.tex
+++ b/thesis-main/document/MainMatter/Introduction.tex
@@ -5,13 +5,13 @@ La era de la informática conversacional está cambiando la forma en la que los 
 interactuar una persona con estos. Se pueden hacer aproximaciones y suposiciones, pero cada persona puede decidir operar de una forma diferente, y sería imposible que un actor de voz grabase infinitas respuestas a las ramas de conversación que pueden surgir de una simple pregunta. En este punto entra la síntesis de voz, si en vez de unas grabaciones, el dispositivo pudiese sintetizar una voz humana, podría responder y hablar con la persona, entablando una especie de conversación.\\
 
 
-La síntesis de voz es la producción artificial del habla humana. Se han diseñado diferentes sistemas para este propósito, llamados sintetizadores de voz y pueden ser implementados tanto en hardware como en software. Un sistema de conversión texto a voz (TTS, por sus siglas en inglés, \textit{text to speech}) o sintetizador de voz, recibe como datos de entrada una frase escrita y como resultado produce una voz audible que reproduce la frase de entrada . Este sistema de conversión, se compone básicamente por dos componentes: un modelo que predice generalmente en forma de espectograma, la mejor pronunciación posible de cualquier texto dado, y un codificador de voz que, a partir del espectograma anterior produce ondas sonoras de voz.\\
+La síntesis de voz es la producción artificial del habla humana a partir de un texto escrito. Se han diseñado diferentes sistemas para este propósito, llamados sintetizadores de voz y pueden ser implementados tanto en hardware como en software. Un sistema de conversión texto a voz (TTS, por sus siglas del inglés, \textit{text to speech}) o sintetizador de voz, recibe como datos de entrada una frase escrita y como resultado produce una voz audible que reproduce la frase de entrada . Este sistema de conversión, se compone básicamente por dos componentes: un modelo que predice generalmente en forma de espectograma, la mejor pronunciación posible de cualquier texto dado, y un codificador de voz que, a partir del espectograma anterior produce ondas sonoras de voz.\\
 
 El proceso de convertir texto a voz requiere un conocimiento
 detallado en diferentes campos de la ciencia. Si se quisiera construir un sistema TTS desde cero, se tendrían que estudiar los siguientes temas:
 
 \begin{itemize}
-	\item Lingüística, el estudio científico del lenguaje. Para sintetizar un habla coherente, los sistemas TTS necesitan reconocer cómo un hablante humano pronuncia el lenguaje escrito; esto requiere conocimientos de lingüística hasta el nivel del fonema\footnote{fonemas: Unidades de sonido que combinadas producen el habla, como el sonido /t/ en tierra}. Para lograr un TTS verdaderamente realista, el sistema también necesita predecir la prosodia apropiada,que incluye elementos del habla más allá del fonema, como acentos, pausas y entonación.
+	\item Lingüística, el estudio científico del lenguaje. Para sintetizar un habla coherente, los sistemas TTS necesitan reconocer cómo un hablante humano pronuncia el lenguaje escrito; esto requiere conocimientos de lingüística hasta el nivel del fonema\footnote{fonemas: Unidades de sonido que combinadas producen el habla, como el sonido /t/ en tierra}. Para lograr un TTS verdaderamente realista, el sistema también necesita predecir la prosodia apropiada, que incluye elementos del habla más allá del fonema, como acentos, pausas y entonación.
 	
 	\item Procesamiento digital de señales de voz: en el contexto de los sistemas TTS se	utilizan diferentes representaciones de características que describen la señal del habla, lo que hace posible entrenar diversos modelos para generar una nueva
 	voz.
@@ -19,14 +19,13 @@ detallado en diferentes campos de la ciencia. Si se quisiera construir un sistem
 	\item Inteligencia artificial, especialmente el aprendizaje profundo, un tipo de aprendizaje automático que utiliza una arquitectura informática llamada red neuronal profunda(DNN, del inglés Deep Neuronal Network). Una DNN es un modelo computacional inspirado en el cerebro humano,se conforma por redes complejas de procesadores, cada uno de los cuales realiza una serie de operaciones antes de enviar su salida a otro procesador. Una DNN aprende la mejor vía de procesamiento para lograr resultados deseados. Este modelo tiene una gran potencia informática, lo que lo hace ideal para manejar la gran cantidad de variables necesarias para la síntesis de voz de alta calidad.
 \end{itemize}
 
-\subsubsection*{Tipos de tecnologías TTS}
 
 Hasta la actualidad se han desarrollado variadas tecnologías TTS, las cuales operan de maneras distintas. Entre las más dominantes se encuentran: 
 
 \begin{enumerate}
 	\item  Síntesis de formantes[\cite{tordera2011linguistica}][\cite{rodriguez2013sintetizador}] y síntesis articulatoria[\cite{hernandez2018sintesis}]: \\Los primeros sistemas TTS empleaban tecnologías basadas en reglas, como la síntesis de formantes y la síntesis articulatoria, que lograron resultados similares a través de estrategias ligeramente diferentes. A partir de una grabación realizada a un hablante, se extrajeron características acústicas de este: formantes, cualidades definitorias de los sonidos del habla, en síntesis de formantes; y forma de articulación (nasal, oclusiva,vocal,etc.) en síntesis articulatoria. Luego, se programarían reglas que recrearan estos parámetros con una señal de audio digital. Este TTS era bastante robótico; y estos enfoques necesariamente abstraen gran parte de la variación que se encontrará en el habla humana, aspectos como la variación de tono, porque solo permiten a los programadores escribir reglas para unos pocos parámetros a la vez.
 	
-	\item Síntesis de difonos[\cite{beutnagel1998diphone}][\cite{al2009arabic}]: \\ El próximo gran desarrollo en el campo TTS se llama síntesis de difonos, se inició en la década de 1970 y todavía era de uso popular durante los últimos años del siglo XX. La síntesis de difonos crea  un habla de máquina mediante la combinación de difonos, combinaciones de fonemas de una sola unidad, y las transiciones de un fonema al siguiente; es decir, no solo la /t/ en la palabra tierra sino la /t/ más la mitad del siguiente sonido /i/. 
+	\item Síntesis de difonos\footnote{difono: Es el sonido que representa la transición entre un fonema y el siguiente. }[\cite{beutnagel1998diphone}][\cite{al2009arabic}]: \\ El próximo gran desarrollo en el campo TTS se llama síntesis de difonos, se inició en la década de 1970 y todavía era de uso popular durante los últimos años del siglo XX. La síntesis de difonos crea  un habla de máquina mediante la combinación de difonos, combinaciones de fonemas de una sola unidad, y las transiciones de un fonema al siguiente; es decir, no solo la /t/ en la palabra tierra sino la /t/ más la mitad del siguiente sonido /i/. 
 	
 	Los sistemas TTS basados en síntesis de difonos incluyen también modelos que predicen la duración y el tono de cada difono para una entrada dada, primero se conectan las señales de difono y luego se procesa esta señal para corregir el tono y la duración. El resultado es un discurso  sintético con un sonido más natural que el que crea la síntesis de formantes, pero aún está lejos de ser perfecto, y tiene pocas ventajas sobre cualquier otro acercamiento. 
 	
@@ -67,18 +66,18 @@ Existe un conjunto de sistemas TTS que se enmarcan bajo una licencia de software
 
 A partir del estudio parcial de las plataformas de código abierto utilizadas para el desarrollo de conversores de texto a voz, fue posible comprobar que la mayoría se encuentran basadas en la síntesis neuronal teniendo en cuenta que alcanza mejores resultados. Estas plataformas brindan modelos previamente entrenados para idiomas específicos como inglés, francés, alemán, etc. Muy pocas presentan un modelo en español, y las que lo hacen solo poseen uno, con acento de voz española o voz neutra.\\
 
-DATYS, es una empresa de desarrollo de software, que como parte de sus soluciones requiere un sintetizador de voz en español con acento propio de nuestro país; esto formará parte de un proyecto que consiste en el desarrollo del primer asistente virtual cubano. 
+DATYS, es una empresa de desarrollo de software, que como parte de sus soluciones requiere un sintetizador de voz en español con acento propio de nuestro país; esto formará parte de un proyecto que consiste en el desarrollo del primer asistente de diálogo, virtual cubano. 
 
 \section*{Objetivo}
 
 \subsection*{Objetivo General}
 
-Desarrollar un sintetizador de texto a voz con voces cubanas.
+Desarrollar un sintetizador de texto a voz adaptado a voces cubanas.
 
 \subsection*{Objetivos específicos}
 \begin{enumerate}
 	\item Analizar en profundidad los métodos y plataformas existentes para la síntesis de voz, principalmente las que trabajan sobre la síntesis neuronal, y seleccionar el más adecuado a utilizar para las aplicaciones de DATYS.
-	\item Diseñar y conformar una base de datos en español, con con voces cubanas para el entrenamiento de los modelos y muestras de voz que se desea generar.
+	\item Diseñar y conformar una base de datos en español, con voces cubanas para el entrenamiento de los modelos y muestras de voz que se desea generar.
 	\item Reentrenar el modelo basado en síntesis neuronal seleccionado, para su ajuste al estilo de voz cubana.
 	\item Evaluar el modelo entrenado y analizar los resultados obtenidos.
 \end{enumerate}
